--- a/src/app/components/footer/Footer.module.css
+++ b/src/app/components/footer/Footer.module.css
@@ -20,23 +20,19 @@
  @media (min-width: 768px) {
    .footer {
      height: 60px;
-     padding: 24px 0px; /* Restore original padding for larger screens */
+     padding: 24px 0px;   /*Restore original padding for larger screens*/
    }
  
    .footerText {
      font-size: 30px; /* Restore original font size for larger screens */
-     line-height: 42px; /* Restore original line height */
+     line-height: 42px; /* 42px; Restore original line height */
    }
  }
 
 
 
 
-
-
-
-
-
+ 
 
 
 
