--- a/src/app/components/button/button.module.css
+++ b/src/app/components/button/button.module.css
@@ -3,7 +3,7 @@
     background-color: #03346E;
     border-radius: .5rem;
     width: 9.5625rem;
-    height: 2.875rem;
+    height: 40px;
     color: white;
     margin-bottom: 1.25rem;
     margin-left: 1.25rem;
