--- a/src/app/components/button/button.module.css
+++ b/src/app/components/button/button.module.css
@@ -2,7 +2,7 @@
     padding: 10.3.5rem 3rem ;
     background-color: #03346E;
     border-radius: .5rem;
-    width: 9.5625rem;
+    width: 154px;
     height: 40px;
     color: white;
     margin-bottom: 1.25rem;
